# town-diary

./: .gitignore  README.md  pyproject.toml
configs/: README.md  agents.yaml  locations.yaml  world.yaml
configs/prompts/: README.md
dev/: 00.project-baseline.dev.md  01.mvp-scope-contract.dev.md  02.architecture-contract.dev.md  03.project-bootstrap.dev.md  04.core-contracts-and-config.dev.md  05.deterministic-run-context.dev.md  06.world-clock.dev.md  07.weather-system.dev.md  08.location-system.dev.md  09.world-state.dev.md  10.world-runtime.dev.md  11.runtime-checkpoint-and-replay.dev.md  12.agent-profile-and-subjective-state.dev.md  13.candidate-behavior-generation.dev.md  14.action-validation-and-execution.dev.md  15.world-event-and-world-log.dev.md  16.two-phase-tick.dev.md  17.rule-based-resident-decisions.dev.md  README.md
docs/: 00-project-understanding.md  01-architecture-boundaries.md  02-implementation-roadmap.md  03-step-by-step-delivery-checklist.md  04-acceptance-and-traceability.md  Codex Implementation Brief.docx  README.md  next-actions.md  小镇日记模拟器工程实现文档.docx  小镇日记模拟器项目策划案.docx
docs/contracts/: README.md  actions-and-candidates.md  architecture-contract.md  data-contracts.md  mvp-scope.md  (+3 more)
tests/: test_actions.py  test_agents.py  test_candidate_generation.py  test_clock.py  test_config_validation.py  test_core_contracts.py  test_location.py  test_project_bootstrap.py  test_rule_decision.py  test_run_context.py  test_runtime_checkpoint.py  test_tick_coordinator.py  test_weather.py  test_world_log.py  test_world_runtime.py  test_world_state.py
(+36 files in other folders)
