[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "town-diary-simulator"
version = "0.1.0"
description = "An independent town simulation observed by a novelist agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
town-diary = "town_diary.main:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
